--- a/srv/sfsrv/.config/systemd/user/sfsrv@.service
+++ b/srv/sfsrv/.config/systemd/user/sfsrv@.service
@@ -34,9 +34,7 @@ ExecStartPre=/usr/bin/sfsrv-script server_tmux_install %i
 ExecStart=/usr/bin/tmux -f /tmp/%u-%i-tmux.conf -L %u-%i-tmux.sock new-session -d -s SfSrv '/srv/sfsrv/server/%i/Engine/Binaries/Linux/UE4Server-Linux-Shipping FactoryGame "-ServerQueryPort=${QUERY_PORT} -BeaconPort=${BEACON_PORT} -Port=${GAME_PORT} -log -unattended"'
 ExecStartPost=/usr/bin/sfsrv-script post-start %i
 ExecStop=/usr/bin/sfsrv-script pre-stop %i
-ExecStop=/usr/bin/kill -s SIGTERM $(/usr/bin/tmux -L %u-%i-tmux.sock list-panes -t SfSrv -F '#{pane_pid}')
-ExecStop=/usr/bin/sleep 5
-ExecStop=/usr/bin/kill -s SIGTERM $(/usr/bin/tmux -L %u-%i-tmux.sock list-panes -t SfSrv -F '#{pane_pid}')
+ExecStop=/usr/bin/sfsrv-script peri-stop %i
 ExecStopPost=/usr/bin/sfsrv-script post-stop %i
 TimeoutStartSec=infinity
 TimeoutStopSec=120
