--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: sfsrv-script
-Version: 1.2-1
-Architecture: amd64
+Version: 1.2-2
+Architecture: all
 Essential: no
 Priority: optional
 Depends: bash, coreutils, sudo, libpam-systemd, grep, sed, gawk, curl, rsync, wget, findutils, tmux, jq, zip, unzip, p7zip, postfix, s-nail, steamcmd
