--- a/srv/sfsrv/.config/systemd/user/sfsrv-timer-1.service
+++ b/srv/sfsrv/.config/systemd/user/sfsrv-timer-1.service
@@ -1,12 +1,12 @@
 #    Copyright (C) 2022 7thCore
-#    This file is part of AvnSrv-Script.
+#    This file is part of SfSrv-Script.
 #
-#    AvnSrv-Script is free software: you can redistribute it and/or modify
+#    SfSrv-Script is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
 #    the Free Software Foundation, either version 3 of the License, or
 #    (at your option) any later version.
 #
-#    AvnSrv-Script is distributed in the hope that it will be useful,
+#    SfSrv-Script is distributed in the hope that it will be useful,
 #    but WITHOUT ANY WARRANTY; without even the implied warranty of
 #    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #    GNU General Public License for more details.
@@ -15,8 +15,8 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 [Unit]
-Description=AvnSrv Script Timer 1 Service
+Description=SfSrv Script Timer 1 Service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/avnsrv-script timer_one
+ExecStart=/usr/bin/sfsrv-script timer_one
